# fastmail-tui

./: .gitignore  README.md  pyproject.toml
docs/: user-guide.html
fastmail_tui/: __init__.py  app.py  config.py  main.py  theme.py
fastmail_tui/api/: __init__.py  claude_client.py  jmap_client.py  masked_email.py
fastmail_tui/models/: __init__.py  email.py  mailbox.py
fastmail_tui/services/: __init__.py  credentials.py  password_generator.py
fastmail_tui/ui/: __init__.py
fastmail_tui/ui/screens/: __init__.py  setup.py
fastmail_tui/ui/widgets/: __init__.py  ai_panel.py  compose_modal.py  email_list.py  email_preview.py  mailbox_tree.py  masked_email_panel.py  search_modal.py  status_bar.py
tests/: __init__.py  test_config.py  test_password_generator.py
